[gd_scene load_steps=7 format=3 uid="uid://bhvxoa8mmfs5x"]

[ext_resource type="Script" uid="uid://cx23xsdijmds" path="res://weapons/WeaponSystem.gd" id="1_jfybe"]
[ext_resource type="AudioStream" uid="uid://ba3thdevtcue3" path="res://assets/SFX/25-CC0-bang-sfx/bang_02.ogg" id="2_yb7su"]
[ext_resource type="AudioStream" uid="uid://b0btugbrijpcl" path="res://assets/SFX/432139__maximbomba__pistolreloadsound.wav" id="3_gx8cs"]

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_jfybe"]
streams_count = 1
stream_0/stream = ExtResource("2_yb7su")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_yb7su"]
streams_count = 1
stream_0/stream = ExtResource("2_yb7su")

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_2obnd"]
streams_count = 1
stream_0/stream = ExtResource("3_gx8cs")

[node name="WeaponSystem" type="Node"]
script = ExtResource("1_jfybe")

[node name="ShootTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="ReloadTimer" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="."]
stream = SubResource("AudioStreamRandomizer_jfybe")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_yb7su")

[node name="ReloadAudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamRandomizer_2obnd")

[connection signal="timeout" from="ReloadTimer" to="." method="_on_reload_timer_timeout"]
